Add SQLite database support with file upload and metadata discovery
Co-authored-by: zpl37 <zpl37@qq.com>